Fixed art collection overlapping problem

--- a/styles/art.css
+++ b/styles/art.css
@@ -16,7 +16,7 @@ main {
 }
 
 .collection {
-    margin: 0 auto 15px;
+    margin: 0 auto;
 }
 
 .artpiece {
@@ -34,6 +34,10 @@ main {
         font-size: 14px;
         color: var(--secondary-text-colour);
     }
+}
+
+.gutter-sizer {
+    width: 2%;
 }
 
 h2 {
